<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="Slide"
  android:id="@+id/main"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.1"/>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="0.25"
    android:orientation="vertical"
    android:layout_gravity="center">

    <com.juankysoriano.materiallife.ui.sketch.PixelTextView
      style="@style/PixelText.Description.Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/intro_welcome" />

    <com.juankysoriano.materiallife.ui.sketch.PixelTextView
      style="@style/PixelText.Description.Title.Big"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/intro_material_life" />
  </LinearLayout>

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="0.6"
    android:layout_gravity="center"
    android:src="@drawable/ic_material_life_icon"
    android:contentDescription="@null"/>

  <com.juankysoriano.materiallife.ui.sketch.PixelTextView
    style="@style/PixelText.Description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/intro_material_design"
    android:layout_weight="0.14" />

  <Space
    android:layout_width="wrap_content"
    android:layout_height="@dimen/intro_bottom_bar_height" />
</LinearLayout>